SUBDIRS = control_packets database .
LDADD = control_packets/libcontrol_packets.a database/libdatabase.a
bin_PROGRAMS=soliloque_server
soliloque_server_SOURCES = main_serv.c server.c channel.c player.c array.c connection_packet.c crc.c packet_tools.c acknowledge_packet.c toolbox.c audio_packet.c ban.c server_stat.c configuration.c registration.c server_privileges.c player_stat.c log.c queue.c packet_sender.c player_channel_privilege.c
